--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.1.0",
+    "@angular/cli": "~15.1.6",
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
+    "@angular/compiler-cli": "^15.1.0",
     "@angular/core": "^15.1.0",
     "@angular/forms": "^15.1.0",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typescript": "~4.9.4",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
