--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.1.0",
+    "@angular/cdk": "^15.2.0",
     "@angular/cli": "~15.1.6",
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/compiler-cli": "^15.1.0",
     "@angular/core": "^15.1.0",
     "@angular/forms": "^15.1.0",
+    "@angular/material": "^15.2.0",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
@@ -40,7 +42,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.9.4"
   },
-  "engines":{
+  "engines": {
     "npm": "9.3.1",
     "node": "18.14.0"
   }
